--- a/Demo/ES5/index.html
+++ b/Demo/ES5/index.html
@@ -10,7 +10,8 @@
     
 
     <!-- <script src="scripts/01_base.js"></script> -->
-    <script src="scripts/02_template.js"></script>
+    <!-- <script src="scripts/02_template.js"></script> -->
+    <script type="module" src="scripts/03_heritage.js"></script>
 
 </body>
 </html>
