--- a/Exercices/ES6/exo01/index.html
+++ b/Exercices/ES6/exo01/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-
+    <!-- Import du script de lancement -->
+    <!-- Type module pour pouvoir utiliser les imports / exports -->
     <script type="module" src="scripts/script.js"></script>
 
 </body>
