ES6 - Encapsulation demo

--- a/Demo/ES6/index.html
+++ b/Demo/ES6/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <!-- <script type="module" src="class/class.js"></script> -->
-    <script type="module" src="inheritance/inheritance.js"></script>
+    <!-- <script type="module" src="inheritance/inheritance.js"></script> -->
+    <script type="module" src="encapsulation/encapsulation.js"></script>
 
 </body>
 
